Update to new Kotlin and Ktor version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-ktor_version=2.3.2
-kotlin_version=1.8.22
-logback_version=1.2.11
+ktorVersion=2.3.3
+kotlinVersion=1.9.0
+logbackVersion=1.2.11
 kotlin.code.style=official
-kmongo_version=4.9.0
-commons_codec_version=1.15
+kmongoVersion=4.9.0
+commonsCodecVersion=1.15
